--- a/index.html
+++ b/index.html
@@ -2,278 +2,74 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مكتبة رقمية</title>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Arial', sans-serif;
-      background-color: #f5f5f5;
-    }
-
-    header {
-      background-color: #333;
-      color: white;
-      padding: 15px 0;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-    }
-
-    nav {
-      background-color: #555;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-      font-size: 18px;
-    }
-
-    .hero {
-      position: relative;
-      background-image: url('meg00.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      color: white;
-    }
-
-    .hero h1 {
-      font-size: 48px;
-      margin: 0;
-      text-shadow: 2px 2px 4px #000;
-    }
-
-    .hero p {
-      font-size: 18px;
-      margin-top: 10px;
-      text-shadow: 1px 1px 3px #000;
-    }
-
-    .sections {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 30px;
-      padding: 50px 20px;
-      background-color: #fff;
-    }
-
-    .section {
-      width: 200px;
-      background-color: #fefefe;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 20px;
-      transition: transform 0.3s ease;
-    }
-
-    .section:hover {
-      transform: scale(1.05);
-    }
-
-    .section img {
-      width: 100px;
-      height: 100px;
-      object-fit: contain;
-      margin-bottom: 15px;
-    }
-
-    .section p {
-      font-size: 16px;
-      color: #333;
-      margin: 0;
-      font-weight: bold;
-    }
-
-.book img {
-  width: 160px;
-  height: auto;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  transition: transform 0.3s ease;
-}
-
-.book img:hover {
-  transform: scale(1.05);
-}
-
-offers {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
-  padding: 40px 20px;
-  background-color: #fff;
-}
-
-
-.offers {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 25px;
-  padding: 40px 20px;
-  background-color: #fff;
-  text-align: center;
-}
-
-.book {
-  width: 180px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  padding: 15px;
-}
-
-.book img {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-.book .price {
-  margin-top: 10px;
-  font-weight: bold;
-  color: #3e2a1a;
-}
-
-.book .rating {
-  color: #ff9900;
-  font-size: 16px;
-  margin-top: 5px;
-}
-
-
-  </style>
+  <title>نظام بنك الدم</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header>📚  مكتبة رقمية </header>
-
-  <nav>
-    <a href="#">الرئيسية</a>
-    <a href="#">الكتب</a>
-    <a href="#">السلة</a>
-    <a href="#">اتصل بنا</a>
-  </nav>
-
-  <section class="hero">
-  <h1>أهلًا بك في عالم الكتب</h1>
-  <p>استكشف مجموعة متنوعة من الكتب وأقتن ما يناسبك</p>
-  <div id="quote-box" style="margin-top: 20px; font-size: 20px; color: #f5f5f5; background-color: rgba(0, 0, 0, 0.4); padding: 10px 20px; border-radius: 10px; max-width: 600px; font-style: italic;"></div>
-</section>
-
-  <section class="sections">
-    <div class="section">
-      <img src="meg0.webp" alt="فلسفة">
-      <p>كتب الفلسفة</p>
+  <!-- الهيدر الأول -->
+  <header class="top-header">
+    <div class="header-links">
+      <a href="#">تسجيل دخول</a> | 
+      <a href="#">إنشاء حساب</a>
     </div>
-    <div class="section">
-      <img src="meg0.webp" alt="أدب">
-      <p>كتب الأدب</p>
+  </header>
+
+  <!-- الهيدر الثاني -->
+  <header class="main-header">
+    <div class="logo-title">
+      <img src="g6.jpg" alt="شعار بنك الدم" class="logo">
+      <span>بنك الدم</span>
     </div>
-    <div class="section">
-      <img src="meg0.webp" alt="شعر">
-      <p>ركن المشاعر</p>
+    <div class="header-buttons">
+      <button class="donate-btn">تبرع سريع</button>
+      <button class="cart-btn"> سلة التبرعات</button>
     </div>
-    <div class="section">
-      <img src="meg0.webp" alt="تطوير الذات">
-      <p>تطوير الذات</p>
-    </div>
+  </header>
 
-  </section>
-<!-- عروض اليوم -->
-<section class="dynamic-offers" style="text-align: center; margin: 50px auto;">
-  <h2 style="color: #3e2a1a;">🎁 عروض اليوم</h2>
-  <p id="offer-text" style="font-size: 20px; font-weight: bold; color: #3e2a1a; margin-top: 15px;"></p>
-</section>
-
-
-<script>
-  const offers = [
-    "📦 خصم 50% على كتب الفلسفة!",
-    "📚 اشترِ كتابين وخذ الثالث مجانًا!",
-    "📘 كتب تطوير الذات الآن بسعر خاص!",
-    "💥 عروض محدودة على الأدب الكلاسيكي!",
-    "📖 خصومات رائعة على ركن المشاعر!",
-    "✨ كتب مختارة بسعر 9 ريال فقط!"
-  ];
-
-  let offerIndex = 0;
-  const offerBox = document.getElementById("offer-text");
-
-  function showOffer() {
-    offerBox.innerText = offers[offerIndex];
-    offerIndex = (offerIndex + 1) % offers.length;
-  }
-
-  showOffer();
-  setInterval(showOffer, 4000); // كل 4 ثواني
-</script>
-<!-- الأكثر مبيعًا -->
-<section class="offers">
-  <h2 style="text-align: center; color: #3e2a1a; margin-top: 40px;">🔥 الأكثر مبيعًا</h2>
-  <div class="books" style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 20px;">
-</section>
-<section class="offers">
-  <h2 style="text-align: center; color: #3e2a1a;">🔥 </h2>
-  <div class="book">
-    <img src="meg1.jpg" alt="كتاب 1">
-    <div class="price">السعر: 77 ريال</div>
-    <div class="rating">⭐⭐⭐⭐☆</div>
-  </div>
-  <div class="book">
-    <img src="meg2.jpg" alt="كتاب 2">
-    <div class="price">السعر: 90 ريال</div>
-    <div class="rating">⭐⭐⭐⭐⭐</div>
-  </div>
-  <div class="book">
-    <img src="meg3.webp" alt="كتاب 3">
-    <div class="price">السعر: 70 ريال</div>
-    <div class="rating">⭐⭐⭐⭐☆</div>
-  </div>
-<div class="book">
-    <img src="meg4.jpg" alt="كتاب4">
-    <div class="price">السعر: 55 ريال</div>
-    <div class="rating">⭐⭐⭐⭐☆</div>
+  <!-- الآية والكلام -->
+  <div class="centered-text">
+    <h2>﴿ وَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيعًا ﴾</h2>
+    <p>ساهم معنا في إنقاذ الأرواح عن طريق التبرع بالدم</p>
   </div>
 
-</section> 
-<script>
-     const quotes = [
-      "الكتب هي سفنٌ تعبر بنا بحار الزمان.",
-      "أعطني كتابًا، أعطيك حياة.",
-      "كلما قرأت أكثر، عرفت أكثر.",
-      "في القراءة حياة أخرى نعيشها بلا حدود.",
-      "الكتاب صديق لا يخون أبدًا.",
-      "من يقرأ يعيش ألف حياة قبل أن يموت، والذي لا يقرأ يعيش حياة واحدة فقط."
-    ];
+  <!-- السطر الرئيسي: تسجيل الدخول + سلايدر الصور -->
+  <div class="content">
+    <div class="login-box">
+      <h3>تسجيل الدخول</h3>
+      <input type="text" placeholder="البريد الإلكتروني أو رقم الهوية">
+      <input type="password" placeholder="كلمة المرور">
+      <button>دخول</button>
+      <a href="#">إنشاء حساب جديد</a>
+    </div>
 
-    let quoteIndex = 0;
-    const quoteBox = document.getElementById("quote-box");
+    <div class="slider-box">
+      <button class="arrow left" onclick="prevImage()">❮</button>
+      <img id="slider-image" src="g1.jpg" alt="صورة توعوية">
+      <button class="arrow right" onclick="nextImage()">❯</button>
+    </div>
+  </div>
 
-    function showQuote() {
-      quoteBox.innerText = quotes[quoteIndex];
-      quoteIndex = (quoteIndex + 1) % quotes.length;
+  <!-- جافاسكربت لتحريك الصور -->
+  <script>
+    let currentImage = 0;
+    const images = ["g1.jpg", "g2.jpg", "g3.jpg"];
+
+    function showImage(index) {
+      const img = document.getElementById("slider-image");
+      img.src = images[index];
     }
 
-    showQuote();
-    setInterval(showQuote, 4000);
-  </script>
+    function nextImage() {
+      currentImage = (currentImage + 1) % images.length;
+      showImage(currentImage);
+    }
 
+    function prevImage() {
+      currentImage = (currentImage - 1 + images.length) % images.length;
+      showImage(currentImage);
+    }
+
+    setInterval(nextImage, 4000); // تغيّر تلقائي كل 4 ثواني
+  </script>
 </body>
-</html>ا
+</html>
