--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <!-- السطر الرئيسي: تسجيل الدخول + سلايدر الصور -->
   <div class="content">
     <div class="login-box">
-      <h3>تسجيل الدخول</h3>
+   
       <input type="text" placeholder="البريد الإلكتروني أو رقم الهوية">
       <input type="password" placeholder="كلمة المرور">
-      <button>دخول</button>
-      <a href="#">إنشاء حساب جديد</a>
+       <button onclick="location.href='k.html'" class="login-button">تسجيل الدخول</button>
+     
     </div>
 
     <div class="slider-box">
