--- a/login.html
+++ b/login.html
@@ -1,42 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>Login - Blood Donation System</title>
-  <link rel="stylesheet" href="style.css">
+  <title>عرض حالة الطلب</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #f7f7f7;
+    }
+
+    /* الهيدر */
+    .top-header {
+      background-color: #1b4d1b;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 30px;
+      font-size: 16px;
+    }
+
+    .top-header a {
+      color: white;
+      text-decoration: none;
+      margin-left: 20px;
+    }
+
+    .top-header a:hover {
+      text-decoration: underline;
+    }
+
+    /* الشعار */
+    .logo-container {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    .logo-container img {
+      height: 80px;
+    }
+
+    /* واجهة حالة الطلب */
+    .status-container {
+      background-color: white;
+      width: 400px;
+      margin: 30px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .status-container h2 {
+      margin-bottom: 20px;
+      font-size: 22px;
+      color: #1b4d1b;
+      text-align: center;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      margin-top: 15px;
+      font-size: 14px;
+      color: #333;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+    }
+
+    button {
+      margin-top: 20px;
+      width: 100%;
+      background-color: #1b4d1b;
+      color: white;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #144014;
+    }
+  </style>
 </head>
 <body>
-  <header class="header-top">
-    <div class="top-bar">
-      <span class="site-title">نظام بنك الدم</span>
-      <div class="auth-buttons">
-        <a href="#">تسجيل دخول</a>
-        <a href="#">إنشاء حساب</a>
-      </div>
-    </div>
-    <div class="logo-bar">
-      <img src="g6.jpg" alt="شعار بنك الدم" class="logo-img">
-      <span class="logo-text">بنك الدم</span>
-      <div class="action-buttons">
-        <button class="quick-donate">تبرع سريع</button>
-        <button class="donation-cart">سلة التبرعات</button>
-      </div>
-    </div>
-  </header>
 
-  <section class="login-section">
-    <div class="login-box">
-      <h2>تسجيل الدخول</h2>
-      <form>
-        <label for="username">اسم المستخدم</label>
-        <input type="text" id="username" name="username" required>
-
-        <label for="password">كلمة المرور</label>
-        <input type="password" id="password" name="password" required>
-
-        <button type="submit">دخول</button>
-      </form>
+  <!-- الهيدر -->
+  <div class="top-header">
+    <div>بنك الدم</div>
+    <div>
+      <a href="#">تسجيل دخول</a>
+      <a href="#">إنشاء حساب</a>
     </div>
-  </section>
+  </div>
+
+  <!-- الشعار -->
+  <div class="logo-container">
+    <img src="g6.jpg" alt="شعار بنك الدم">
+  </div>
+
+  <!-- حالة الطلب -->
+  <div class="status-container">
+    <h2>عرض حالة الطلب</h2>
+
+    <label for="status">حالة الطلب:</label>
+    <select id="status">
+      <option>تم القبول</option>
+      <option>تم الرفض</option>
+    </select>
+
+    <label for="date">تاريخ وقت التبرع:</label>
+    <input type="date" id="date">
+
+    <label for="center">مركز التبرع:</label>
+    <input type="text" id="center" placeholder="اسم مركز التبرع">
+
+<a href="A.html">
+  <button>عرض</button>
+</a>
+  </div>
+
 </body>
 </html>
